[package]
name = "cubrid-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Low-level CUBRID wire protocol implementation in pure Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cubrid/cubrid-rs"
keywords = ["cubrid", "database", "driver", "protocol"]
categories = ["database"]
readme = "../README.md"

[dependencies]
bytes = "1"
byteorder = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
